# KAIRO

./: .gitignore  README.md
config/: kairo.yaml
jarvis-runtime/: README.md  pyproject.toml
jarvis-runtime/adapters/base/: platform_adapter.py
jarvis-runtime/adapters/macos/: adapter.py  applescript.py
jarvis-runtime/adapters/windows/: adapter.py
jarvis-runtime/config/: jarvis.yaml
jarvis-runtime/core/config/: __init__.py  loader.py  models.py
jarvis-runtime/core/intent/: router.py
jarvis-runtime/core/pipeline/: greeting_pipeline.py  wake_pipeline.py
jarvis-runtime/core/registry/: executor.py
jarvis-runtime/core/session/: state_machine.py
jarvis-runtime/memory/session_cache/: redis_client.py
jarvis-runtime/memory/vector/: client.py
jarvis-runtime/runtime/: daemon.py  event_bus.py  health.py
jarvis-runtime/sensors/: camera.py
jarvis-runtime/sensors/gesture/: face_verifier.py  fusion.py  gesture_detector.py
jarvis-runtime/sensors/voice/: normalizer.py  transcriber.py
jarvis-runtime/tests/core/: test_executor.py  test_intent_router.py  test_state_machine.py
jarvis-runtime/tests/tools/: test_workspace_mode.py
jarvis-runtime/tools/chrome/: open_url.py
jarvis-runtime/tools/intellij/: open_project.py  switch_window.py
jarvis-runtime/tools/music/: play_music.py
kairo/: .gitignore  README.md  pyproject.toml
kairo/assistant_core/: agent_loop.py  fast_path.py  mood.py  personality.py  reasoner.py
kairo/config/: identity.yaml  kairo.yaml
kairo/context_service/: detector.py
kairo/core/: __init__.py
kairo/core/config/: models.py
kairo/core/pipeline/: wake_pipeline.py
kairo/core/registry/: tool_registry.py
kairo/core/session/: session_context.py
kairo/docs/: KAIRO-overview.md  PROJECT-CONTEXT.md
kairo/llm_router/: groq_provider.py  ollama_provider.py  protocol.py
kairo/llm_router/prompts/: fast.j2  system.j2
kairo/memory/behavioral/: query.py
kairo/memory_service/: identity.py  session_store.py
kairo/runtime/: daemon.py  event_bus.py
kairo/scripts/: train_wake_word.py
kairo/sensors/gesture/: fusion.py
kairo/sensors/observer/: __init__.py  activity_classifier.py
kairo/sensors/voice/: normalizer.py  vad.py
kairo/sensors/wake/: factory.py  openwakeword_stream.py
kairo/stt_service/: mic_listener.py  sounddevice_mic_listener.py  sounddevice_segmenter.py  speaker_verifier.py  vad_filter.py  whisper_engine.py
kairo/tests/assistant_core/: test_reasoner.py
kairo/tests/core/: test_executor.py  test_intent_router.py  test_state_machine.py
kairo/tests/memory_service/: test_identity.py  test_preferences.py  test_session_store.py
kairo/tools/: _base.py
kairo/voice_service/: base.py  piper_engine.py
(+81 files in other folders)
