[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-runtime"
version = "0.1.0"
requires-python = ">=3.11"
description = "Production-grade macOS desktop assistant runtime"

dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "ollama>=0.4",
    "pywhispercpp>=1.2",
    "mediapipe>=0.10",
    "insightface>=0.7",
    "chromadb>=0.4",
    "aiosqlite>=0.19",
    "aioredis>=2.0",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "pyaudio>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
jarvis = "runtime.daemon:main"
jarvis-enroll = "sensors.gesture.face_verifier:enroll_cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["runtime*", "core*", "sensors*", "adapters*", "tools*", "memory*"]
