[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kairo-runtime"
version = "0.2.0"
requires-python = ">=3.11"
description = "KAIRO — local-first desktop companion runtime for macOS"

dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "ollama>=0.4",
    "pywhispercpp>=1.2",
    "mediapipe>=0.10",
    "insightface>=0.7",
    "chromadb>=0.4",
    "aiosqlite>=0.19",
    "aioredis>=2.0",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "pyaudio>=0.2",
    "edge-tts>=7.0",
    "resemblyzer>=0.1",
    "groq>=0.9",
    "readability-lxml>=0.8",
    "duckduckgo-search>=7.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]
wake = [
    "openwakeword>=0.6.0",
]
mlx = [
    "mlx-whisper>=0.4.0",
]
# sounddevice + scipy: same mic segmentation as newThing/test.py (high-pass, peak gate, silence tail)
sd-mic = [
    "sounddevice>=0.4.6",
    "scipy>=1.10",
]

[project.scripts]
kairo = "runtime.daemon:main"
kairo-echo = "stt_service.echo_cli:main"
kairo-enroll-face = "sensors.gesture.face_verifier:enroll_cli"
kairo-enroll-voice = "sensors.voice.voice_verifier:enroll_voice_cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = [
    "runtime*",
    "core*",
    "sensors*",
    "adapters*",
    "tools*",
    "memory*",
    "memory_service*",
    "context_service*",
    "voice_service*",
    "stt_service*",
    "llm_router*",
    "assistant_core*",
]
